# onprem-ai-adoption-radar

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_source.md
.github/workflows/: catalog-autopilot.yml  ci.yml  publish.yml
config/: category-quotas.yaml  model-seed.yaml  scoring.yaml  seed-sources.yaml
data/: history.jsonl  model-history.jsonl
docs/: architecture.md  persistence.md  sandbox-playbook.md  seed-research-proposals.yaml  seed-research.md
docs/profile/: openclaw-profile-brief.md
docs/superpowers/plans/: 2026-06-10-agent-tooling-adoption-radar.md  2026-06-19-local-model-radar-A-catalog.md  2026-06-19-research-sources.md  2026-06-22-device-matching-A-engine.md  2026-06-22-device-matching-B-web.md  2026-06-22-local-model-radar-B-decision.md  2026-06-22-local-model-radar-C-surface.md  2026-06-22-model-discovery.md  2026-06-23-catalog-autopilot.md  2026-06-23-catalog-expansion-and-ui.md
docs/superpowers/specs/: 2026-06-10-agent-tooling-adoption-radar-design.md  2026-06-13-evidence-radar-v2-design.md  2026-06-15-mega-brand-redesign-design.md  2026-06-19-local-model-radar-design.md  2026-06-19-research-sources-design.md
src/radar/: __init__.py  cli.py  constants.py  init_project.py  models.py  orchestrator.py
src/radar/analysis/: __init__.py  backtest.py  calibration.py
src/radar/collectors/: __init__.py  base.py  github.py  manual.py  registry.py  rss.py
src/radar/discovery/: __init__.py  github_trending.py  hf_papers.py  hf_trending_models.py  model_promotion.py  model_proposals.py  proposals.py
src/radar/enrichment/: __init__.py  arxiv.py  downloads.py  hackernews.py  osv.py  retry.py  runner.py
src/radar/mcp_server/: __init__.py  model_queries.py  queries.py  server.py
src/radar/models_radar/: assemble.py  device_fit.py  devices.py  entities.py  history.py  memory.py  momentum.py  pipeline.py  reports.py  scan.py  scoring.py  seed.py
src/radar/models_radar/collectors/: huggingface.py  ollama.py
src/radar/notify/: __init__.py  webhook.py
src/radar/pipeline/: __init__.py  cards.py  classify.py  dedupe.py  delta.py  evidence.py  llm_classify.py  momentum.py  quotas.py  upgrade_risk.py
src/radar/reports/: comparison.py  feeds.py  history.py  json_export.py  markdown.py  movers.py  sandbox.py  try_this_week.py
src/radar/scoring/: __init__.py  calibrate.py  deterministic.py  profiles.py  rings.py
src/radar/storage/: config.py  database.py  history_log.py  history_store.py  metrics_store.py  model_metrics_store.py  overrides_store.py  run_store.py  seed_store.py  source_health_store.py
src/radar/web/: __init__.py  app.py  backer_badge.py  models_summary.py  picker_context.py  scan_health.py  slugs.py  source_health.py  static_site.py
src/radar/web/templates/: _backer_cell.html  _base_styles.html  _device_picker.html  _filter_bar.html  _filter_script.html  _footer.html  _hero.html  _legend.html  _model_detail.html  _models_filter_bar.html  _models_filter_script.html  _models_sort_script.html  _models_summary.html  _project_detail.html  _scan_health.html  _source_health.html  _stats.html  compare.html  history.html  index.html  model.html  models.html  project.html  sources.html  static_compare.html  static_history.html  static_index.html  static_model.html  static_models.html  static_project.html
tests/: test_backer_badge.py  test_backtest.py  test_calibrate.py  test_calibration_report.py  test_cards.py  test_classify.py  test_cli.py  test_collectors_github.py  test_collectors_manual.py  test_collectors_rss.py  test_config.py  test_database.py  test_dedupe.py  test_delta.py  test_device_fit.py  test_device_picker.py  test_devices.py  test_discovery.py  test_discovery_hf_papers.py  test_enrichment.py  test_enrichment_arxiv.py  test_evidence.py  test_feeds.py  test_hf_trending_models.py  test_history_log.py  test_history_store.py  test_init_project.py  test_llm_classify.py  test_mcp_queries.py  test_mcp_server.py  test_metrics_store.py  test_model_metrics_store.py  test_model_promotion.py  test_model_proposals.py  test_model_queries.py  test_models_papers.py  test_models_radar_assemble.py  test_models_radar_cli.py  test_models_radar_entities.py  test_models_radar_hf.py  (+34 more)
tests/fixtures/: github_releases.json  rss_feed.xml
