[project]
name = "onprem-ai-adoption-radar"
version = "0.1.0"
description = "Decision-oriented radar for agent/tooling adoption in on-prem AI workflows"
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.12"
dependencies = [
  "feedparser>=6.0.11",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "mcp>=1.2.0",
  "pydantic>=2.9.0",
  "python-dateutil>=2.9.0",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.2",
  "rich>=13.9.0",
  "typer>=0.12.5",
  "uvicorn>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0"
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0"
]

[project.scripts]
radar = "radar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radar"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  # Cosmetic: FastAPI's TestClient triggers a Starlette/httpx deprecation we
  # don't control. Match by message (any category) so the suite output is clean.
  "ignore:Using .httpx. with .starlette.testclient.",
]
