[project]
name = "onprem-ai-adoption-radar"
version = "0.1.0"
description = "Decision-oriented radar for agent/tooling adoption in on-prem AI workflows"
readme = "README.md"
license = "Unlicense"
authors = [{ name = "Enes Kaynakcı" }]
keywords = ["ai", "agents", "tech-radar", "on-prem", "self-hosted", "mcp", "adoption"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
  "feedparser>=6.0.11",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "mcp>=1.2.0",
  "pydantic>=2.9.0",
  "python-dateutil>=2.9.0",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.2",
  "rich>=13.9.0",
  "typer>=0.12.5",
  "uvicorn>=0.32.0"
]

[project.urls]
Repository = "https://github.com/ekaynac/onprem-ai-adoption-radar"
Issues = "https://github.com/ekaynac/onprem-ai-adoption-radar/issues"
Changelog = "https://github.com/ekaynac/onprem-ai-adoption-radar/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "types-pyyaml>=6.0.0",
  "types-python-dateutil>=2.9.0"
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "types-pyyaml>=6.0.0",
  "types-python-dateutil>=2.9.0"
]

[project.scripts]
radar = "radar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radar"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  # Cosmetic: FastAPI's TestClient triggers a Starlette/httpx deprecation we
  # don't control. Match by message (any category) so the suite output is clean.
  "ignore:Using .httpx. with .starlette.testclient.",
]

[tool.coverage.run]
source = ["src/radar"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]
ignore = [
  "E501",   # long lines: a few rubric/report strings read better unwrapped
  "B008",   # typer.Option in argument defaults is the idiomatic Typer pattern
  "UP042",  # keep (str, Enum): StrEnum changes str() rendering of members
  "RUF001", # en dashes / ellipses in prose strings are intentional
  "RUF002",
  "RUF003",
]

[tool.ruff.lint.isort]
known-first-party = ["radar"]
lines-after-imports = 2

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["radar"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["feedparser.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_typed = false
